# stablecoin-tracker

./: .gitignore  .nojekyll  README.md  _dashboard_content.qmd  _quarto.yml  index.html  index.qmd  news.html  news.qmd  pyproject.toml  robots.txt  search.json  sitemap.xml
.github/workflows/: daily_scrape.yml
.jules/: sentinel.md
data/: news_archive.csv  stablecoin_marketcap.csv
src/: fetch_daily_data.py  generate_dashboard.py  generate_plot.py  get_coingekodata.py  update_readme.py
