[project]
name = "temp-python"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "click>=8.3.1",
    "cloudscraper>=1.2.71",
    "feedparser>=6.0.12",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "seaborn>=0.13.2",
]
